--- a/Personal_Portfolio_Page/style.css
+++ b/Personal_Portfolio_Page/style.css
@@ -1,25 +1,31 @@
 :root {
   --hue: 210; /* Blue */
   --accent-hue: 25; /* Orange */
+  font-size: 16px;
   /* Light theme */
   --c-light-text: #333;
-  --c-light-background: #fff;
-  --c-light-focus: deepskyblue;
-  --c-light-interactive: mediumvioletred;
+  --c-light-background: hsl(43, 54%, 92%);
+  --c-light-focus: hsl(var(--hue), 70%, 45%);
+  --c-light-interactive: hsl(var(--accent-hue), 90%, 70%);
+  --c-light-nav-list-interactive: hsl(var(--accent-hue), 50%, 50%);
   --c-light-text-color-highlight: hsl(var(--hue), 70%, 45%);
   --c-light-text-color-background: hsl(var(--accent-hue), 45%, 70%);
   --c-light-button-background: hsl(var(--accent-hue), 63%, 43%);
   --c-light-button-text-color: black;
+  --c-light-grid-background-color: hsl(var(--accent-hue), 90%, 70%);
+  --c-light-grid-border-color: hsl(var(--accent-hue), 63%, 43%);
 
   /* Dark theme */
   --c-dark-text: hsl(var(--hue), 10%, 62%);;
   --c-dark-background: hsl(var(--hue), 20%, 12%);
-  --c-dark-focus: deeppink;
+  --c-dark-focus: hsl(var(--accent-hue), 70%, 45%);
   --c-dark-interactive: hsl(var(--hue), 90%, 70%);
   --c-dark-text-color-highlight: hsl(var(--accent-hue), 70%, 45%);
   --c-dark-text-color-background: hsl(var(--hue), 45%, 70%);
   --c-dark-button-background: hsl(var(--hue), 63%, 43%);
-  --c-dark-button-text-color: black;
+  --c-dark-button-text-color: white;
+  --c-dark-grid-background-color: hsl(var(--hue), 90%, 70%);
+  --c-dark-grid-border-color: hsl(var(--hue), 63%, 43%);
 }
 
 .theme-container {
@@ -31,6 +37,7 @@
    padding: 1.5rem;
   color: var(--c-text);
   background-color: var(--c-background);
+  --navigation-list: var(--c-light-nav-list-interactive);
 }
 
 .dark-mode-checkbox:checked ~ .theme-container {
@@ -43,10 +50,13 @@
   --c-light-text-color-background : var(--c-dark-text-color-background);
   --c-light-button-background: var(--c-dark-button-background);
   --c-light-button-text-color: var(--c-dark-button-text-color);
+  --c-light-grid-background-color: var(--c-dark-grid-background-color);
+  --c-light-grid-border-color: var(--c-dark-grid-border-color)
 }
 
 .dark-mode-label {
   margin-bottom: 1em;
+  float: right;
 }
 
 :focus,
@@ -127,11 +137,17 @@ body {
 */
 body {
   margin: 0;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  font-size: 1.25em;
+  font-family: 'Roboto', sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 1.2em;
   line-height: 1.5;
 }
+
 ::selection{
+  color: var(--c-light-text-color-highlight);
+  background: var(--c-light-text-color-background);
+}
+::-moz-selection{
   color: var(--c-light-text-color-highlight);
   background: var(--c-light-text-color-background);
 }
@@ -149,24 +165,62 @@ code {
 }
 
 .wrapper {
-  max-width: 600px;
+  max-width: 100%;
+  padding: 10px;
+  margin-top: 50px;
 }
-.nav {
-    position: fixed;
-    max-width: 290px;
-    top: 0px;
-    right: 0px;
-    width: 150px;
-    height: 150px;
-    background-color: greenyellow;
+.navigation {
+  height: 75px;
+  background-color: transparent;
+  background: transparent;
   }
-.nav-list {
-  display: flex;
-  margin-right: 2rem;
+
+.navigation-container{
+  max-width: 91%;
+  margin: 0 left;
+  padding-left: 20px;
+  background-color: var(--navigation-list);
+  }
+
+.navigation-list{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.navigation-list-color a{
+  background-color: var(--navigation-list);
+  text-transform: lowercase;
+}
+.navigation ul li a:hover {
+  background-color: #fff; 
+  color: #458B74;
 }
 
-.nav-list a {
-  display: inline-block;
-  font-size: 2.2rem;
-  padding: 2rem;
+#gallery {
+  padding-top: 10%
+}
+
+.image-node {
+  width: 1064px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  position: relative;
+  margin-bottom: 50px;
+}
+
+.image {
+  padding: 5px;
+  border-color: red;
+  border-style: solid;
+  border-radius: 5px;
+}
+
+.hover-layer {
+  color: white;
+  position: absolute;
+  width: 256px;
+  height: 256px;
+  cursor: pointer;
 }
