Updates to index and style
Updates to layout and code. Looked up implementation at W3Schools.

--- a/Personal_Portfolio_Page/style.css
+++ b/Personal_Portfolio_Page/style.css
@@ -130,8 +130,6 @@ body {
   flex-grow: 1; /* 1. */
 }
 
-
-
 /*
 * Basic styles
 */
@@ -156,18 +154,11 @@ a {
   color: var(--c-interactive);
 }
 
-h1 {
-  margin-top: 0;
-}
-
-code {
-  font-family: 'Fira Mono', Consolas, 'Liberation Mono', Menlo, Courier, monospace;
-}
-
 .wrapper {
   max-width: 100%;
   padding: 10px;
-  margin-top: 50px;
+  margin-top: 10px;
+  border: 1px solid green;
 }
 .navigation {
   height: 75px;
@@ -179,7 +170,6 @@ code {
   max-width: 91%;
   margin: 0 left;
   padding-left: 20px;
-  background-color: var(--navigation-list);
   }
 
 .navigation-list{
@@ -187,40 +177,59 @@ code {
   margin: 0;
   padding: 0;
 }
-.navigation-list-color a{
-  background-color: var(--navigation-list);
-  text-transform: lowercase;
+.navigation-list-text a{
+  text-transform: capitalize;
 }
 .navigation ul li a:hover {
-  background-color: #fff; 
-  color: #458B74;
+  background-color: var(--c-light-text-color-background); 
+  color: var(--c-light-text-color-highlight);
+}
+div.gallery {
+  border: 1px solid #ccc;
 }
 
-#gallery {
-  padding-top: 10%
+div.gallery:hover {
+  border: 1px solid #777;
 }
 
-.image-node {
-  width: 1064px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  position: relative;
-  margin-bottom: 50px;
+div.gallery img {
+  width: auto;
+  height: auto;
 }
 
-.image {
-  padding: 5px;
-  border-color: red;
-  border-style: solid;
-  border-radius: 5px;
+div.desc {
+  padding: 12px;
+  text-align: center;
 }
 
-.hover-layer {
-  color: white;
-  position: absolute;
-  width: 256px;
-  height: 256px;
-  cursor: pointer;
+* {
+  box-sizing: border-box;
+}
+
+.responsive {
+  padding: 0 6px;
+  border: 1px solid green;
+  margin: 6px 6px;
+  float: left;
+  width: auto;
+}
+
+@media only screen and (max-width: 700px) {
+  .responsive {
+    width: 49%;
+    margin: 6px 6px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .responsive {
+    width: 100%;
+    margin: 6px 6px;
+  }
+}
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
 }
