--- a/Personal_Portfolio_Page/style.css
+++ b/Personal_Portfolio_Page/style.css
@@ -193,8 +193,10 @@ div.gallery:hover {
 }
 
 div.gallery img {
-  width: auto;
-  height: auto;
+  width: 300px;
+  height: 200px;
+  margin: 6px;
+  padding: 6px;
 }
 
 div.desc {
@@ -208,7 +210,6 @@ div.desc {
 
 .responsive {
   padding: 0 6px;
-  border: 1px solid green;
   margin: 6px 6px;
   float: left;
   width: auto;
