--- a/Personal_Portfolio_Page/style.css
+++ b/Personal_Portfolio_Page/style.css
@@ -10,11 +10,9 @@
   --c-light-nav-list-interactive: hsl(var(--accent-hue), 50%, 50%);
   --c-light-text-color-highlight: hsl(var(--hue), 70%, 45%);
   --c-light-text-color-background: hsl(var(--accent-hue), 45%, 70%);
-  --c-light-button-background: hsl(var(--accent-hue), 63%, 43%);
-  --c-light-button-text-color: black;
-  --c-light-grid-background-color: hsl(var(--accent-hue), 90%, 70%);
-  --c-light-grid-border-color: hsl(var(--accent-hue), 63%, 43%);
-
+  --c-light-project-tab: hsl(var(--accent-hue), 70%, 90%);
+  --c-light-border-color: hsl(var(--accent-hue), 70%, 45%);
+  
   /* Dark theme */
   --c-dark-text: hsl(var(--hue), 10%, 62%);;
   --c-dark-background: hsl(var(--hue), 20%, 12%);
@@ -22,11 +20,9 @@
   --c-dark-interactive: hsl(var(--hue), 90%, 70%);
   --c-dark-text-color-highlight: hsl(var(--accent-hue), 70%, 45%);
   --c-dark-text-color-background: hsl(var(--hue), 45%, 70%);
-  --c-dark-button-background: hsl(var(--hue), 63%, 43%);
-  --c-dark-button-text-color: white;
-  --c-dark-grid-background-color: hsl(var(--hue), 90%, 70%);
-  --c-dark-grid-border-color: hsl(var(--hue), 63%, 43%);
-}
+  --c-dark-project-tab: hsl(var(--hue), 70%, 90%);
+  --c-dark-border-color: hsl(var(--hue), 90%, 70%);
+  }
 
 .theme-container {
   /* Make the light theme the default */
@@ -38,6 +34,8 @@
   color: var(--c-text);
   background-color: var(--c-background);
   --navigation-list: var(--c-light-nav-list-interactive);
+  --project-tab: var(--c-light-project-tab);
+  --border-color: var(--c-light-border-color);
 }
 
 .dark-mode-checkbox:checked ~ .theme-container {
@@ -51,7 +49,9 @@
   --c-light-button-background: var(--c-dark-button-background);
   --c-light-button-text-color: var(--c-dark-button-text-color);
   --c-light-grid-background-color: var(--c-dark-grid-background-color);
-  --c-light-grid-border-color: var(--c-dark-grid-border-color)
+  --c-light-grid-border-color: var(--c-dark-grid-border-color);
+  --c-light-project-tab: var(--c-dark-project-tab);
+  --c-light-border-color: var(--c-dark-border-color);
 }
 
 .dark-mode-label {
@@ -140,6 +140,9 @@ body {
   font-size: 1.2em;
   line-height: 1.5;
 }
+h1, h2, h3, h4, h5{
+  text-align: center;
+}
 
 ::selection{
   color: var(--c-light-text-color-highlight);
@@ -158,79 +161,152 @@ a {
   max-width: 100%;
   padding: 10px;
   margin-top: 10px;
-  border: 1px solid green;
 }
-.navigation {
-  height: 75px;
-  background-color: transparent;
-  background: transparent;
-  }
+h1{
+  font-size: 6em;
+}
 
-.navigation-container{
-  max-width: 91%;
-  margin: 0 left;
-  padding-left: 20px;
-  }
+#welcome-section {
+  box-sizing: border-box;
+  display: block;
+  height: 100vh;
+  width: 100%;
+ }
 
-.navigation-list{
+ .slideout-sidebar {
+  position: fixed;
+  top: 0;
+  left: -205px;
+  z-index: 0;
+  width: 168px;
+  height: 100%;
+  padding: 20px;
+  background-color: var(--project-tab);
+  transition: all 300ms ease-in-out;
+}
+
+.slideout-sidebar ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-.navigation-list-text a{
-  text-transform: capitalize;
-}
-.navigation ul li a:hover {
-  background-color: var(--c-light-text-color-background); 
-  color: var(--c-light-text-color-highlight);
-}
-div.gallery {
-  border: 1px solid #ccc;
+
+.slideout-sidebar ul li {
+  cursor: pointer;
+  padding: 18px 0;
+ }
+
+
+#menu-toggle {
+  display: none;
 }
 
-div.gallery:hover {
-  border: 1px solid #777;
+.menu-icon {
+  position: absolute;
+  top: 18px;
+  left: 30px;
+  font-size: 24px;
+  z-index: 1;
+  transition: all 300ms ease-in-out;
 }
 
-div.gallery img {
-  width: 300px;
-  height: 200px;
-  margin: 6px;
-  padding: 6px;
+#menu-toggle:checked ~ .slideout-sidebar {
+  left: 0px;
 }
 
-div.desc {
-  padding: 12px;
+#menu-toggle:checked + .menu-icon {
+  left: 210px;
+}
+
+#menu-toggle:checked ~ .content-container {
+  padding-left: 190px;
+}
+
+.portfolio {
+  display: block;
+  overflow: hidden;
+  clear: both;
+  padding-top: 40px;
+  padding-bottom: 50px;
+  align-content: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+ }
+
+.portfolio-container {
+  margin: auto;
+  max-width: auto;
+  align-content: center;
+  display: -webkit-flex;
+  -webkit-flex-flow: row wrap;
+  display: flex;
+  flex-flow: row wrap;
+ }
+.project-tile {
+  display: block;
+  margin: 5px auto 5px;
+  padding: 10px;
+  max-width: 320px;
+  border-radius: 3px;
+  background-color: var(--project-tab);
+  box-shadow: 0px 0px 1px hsl(0, 0%, 30%);
+  -webkit-box-shadow: 0px 0px 1px hsl(0, 0%, 30%);
+  -moz-box-shadow: 0px 0px 1px hsl(0, 0%, 30%);
+   transition: all ease-in-out 200ms;
+  -webkit-transition: all ease-in-out 200ms;
+  border: 4px solid var(--border-color);
+  }
+
+.project-tile img {
+  display: block;
+  max-width: 100%;
+}
+
+.project-tile a {
+  padding: 0;
+  color: var(--c-text);
+  text-decoration: none;
+  -o-transition:.5s;
+  -ms-transition:.5s;
+  -moz-transition:.5s;
+  -webkit-transition:.5s;
+  transition:.5s;
+}
+
+figure:hover {
+  box-shadow: 0px 0px 30px hsl(0, 0%, 30%);
+}
+
+.project-tab figcaption {
+  display: block;
+}
+
+figcaption p {
+  margin: 0;
+  padding: 0 3px;
+  font-size: 0.75em;
+  font-weight: 400;
+  color: var(--c-text);
+}
+figcaption a{
+  color: var(--c-interactive);
+}
+.text-center{
   text-align: center;
 }
-
-* {
-  box-sizing: border-box;
-}
-
-.responsive {
-  padding: 0 6px;
-  margin: 6px 6px;
-  float: left;
-  width: auto;
-}
-
-@media only screen and (max-width: 700px) {
-  .responsive {
-    width: 49%;
-    margin: 6px 6px;
+@media (max-width: 1200px) {
+  .navigation {
+    justify-content: center;
   }
 }
-
-@media only screen and (max-width: 500px) {
-  .responsive {
-    width: 100%;
-    margin: 6px 6px;
+@media (max-width: 768px) {
+  .navigation {
+    justify-content: center;
   }
 }
-
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
+@media (max-width: 500px) {
+  .navigation {
+    justify-content: center;
+  }
 }
